objects/Problem__c.object
<CustomObject>
    <fields>
        <fullName>Failing_Component__c</fullName>
        <description>Identify the component which is failing in the system.</description>
        <inlineHelpText>Identify the component which is failing in the system.</inlineHelpText>
        <label>Failing Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No failing component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Arc chamber</fullName>
                </value>
                <value>
                    <fullName>Auxiliary board</fullName>
                </value>
                <value>
                    <fullName>Button / Switch</fullName>
                </value>
                <value>
                    <fullName>Capacitor</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>Circuit breaker / Trip unit / Relay</fullName>
                </value>
                <value>
                    <fullName>Connectors / Lugs</fullName>
                </value>
                <value>
                    <fullName>Contact / Coil</fullName>
                </value>
                <value>
                    <fullName>CPU / Processor</fullName>
                </value>
                <value>
                    <fullName>Current path / Wiring</fullName>
                </value>
                <value>
                    <fullName>Display / Indicator</fullName>
                </value>
                <value>
                    <fullName>Documentation / Instructions</fullName>
                </value>
                <value>
                    <fullName>Electronic component</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
                <value>
                    <fullName>Handle</fullName>
                </value>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Labels / Name plates</fullName>
                </value>
                <value>
                    <fullName>Magnetics</fullName>
                </value>
                <value>
                    <fullName>Main board</fullName>
                </value>
                <value>
                    <fullName>Mechanical component</fullName>
                </value>
                <value>
                    <fullName>Memory</fullName>
                </value>
                <value>
                    <fullName>Motor</fullName>
                </value>
                <value>
                    <fullName>Mounting feet / Guides</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>Power supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Mode__c</fullName>
        <description>Identify the mode in which the above component is failing.</description>
        <inlineHelpText>Identify the mode in which the above component is failing.</inlineHelpText>
        <label>Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Aspect</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Thermal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No fault found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalComments__c</fullName>
        <label>8D Evaluation Final Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FirstImpactedCode__c</fullName>
        <description>Advanced I2P - Input the code of the first impacted part. If multiple, unconnected ranges are affected, input the lowest code.For supplier problems &quot; To be completed by the supplier&quot;</description>
        <inlineHelpText>Input the code of the first impacted part. If multiple, unconnected ranges are affected, input the lowest code.For supplier problems &quot; To be completed by the supplier&quot;</inlineHelpText>
        <label>First Impacted Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HowManyPartsAreAffected__c</fullName>
        <description>Advanced I2P: If the actual number of the non conforming parts/products  is unknown please record the estimated  one</description>
        <inlineHelpText>Input the total number of units that may be affected by the Problem. Do not just count the units on which the Problem was discovered. Remember to update this number as the Problem investigation progresses.</inlineHelpText>
        <label>How Many Parts are Affected?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowWasTheProblemDetected__c</fullName>
        <description>Describe how the Problem was detected</description>
        <inlineHelpText>Describe how the Problem was detected</inlineHelpText>
        <label>How Was the Problem Detected?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_behave_with_customers__c</fullName>
        <description>Explain how front offices are supposed to behave with customers to solve their issues. DO NOT use this field to request actions from countries; use Containment Actions for that purpose.</description>
        <inlineHelpText>Explain how front offices are supposed to behave with customers to solve their issues. DO NOT use this field to request actions from countries; use Containment Actions for that purpose.</inlineHelpText>
        <label>How to behave with customers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indiv_Management_XA__c</fullName>
        <description>I2P February 2013 Release: IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink(&quot;/sfc/p/A0000000abSm/a/A0000000D7d2/3INhuvT80oEBZMtSCmVU4f4e0TcgXv4Us5VJILnIzGk=&quot;,&quot; Click here for Individual Management of Containment Action&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Indiv_Management_XA&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRelatedToBusinessRiskEscalation__c</fullName>
        <description>If one or more BRE is associated to the Problem</description>
        <formula>IF( TECH_IsBRERelated__c, IMAGE(&quot;/resource/PI2P_BRE&quot;,&quot;PROBLEMBRE&quot; ,20,202), &apos;NO&apos;)</formula>
        <inlineHelpText>Flag the Problem if related to a Business Risk Escalation</inlineHelpText>
        <label>Related to BRE?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSummaryOfContainmentBlank__c</fullName>
        <label>Is Summary of Containment Blank ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSummaryOfCorrectionBlank__c</fullName>
        <label>Is Summary of Correction Blank ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSummaryOfPreventionBlank__c</fullName>
        <label>Is Summary of Prevention Blank ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSummaryOfRCABlank__c</fullName>
        <label>Is Summary of RCA Blank ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastImpactedCode__c</fullName>
        <description>Advanced I2P - Input the code of the last impacted part. If multiple, unconnected ranges are affected, input the highest code.For supplier problems &quot; To be completed by the supplier&quot;</description>
        <inlineHelpText>Input the code of the last impacted part. If multiple, unconnected ranges are affected, input the highest code. For supplier problems &quot; To be completed by the supplier&quot;</inlineHelpText>
        <label>Last Impacted Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestOSACDecision__c</fullName>
        <inlineHelpText>The most recent decision taken by the Offer Safety Alert Committee on this file. Only applicable to Offer Safety Alerts. This field is automatic and cannot be edited manually.</inlineHelpText>
        <label>Latest OSAC Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Step__c</fullName>
        <description>Offer Life Step at which the Problem occurs</description>
        <inlineHelpText>Offer Life Step at which the Problem occurs</inlineHelpText>
        <label>Life Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Start Up</fullName>
                </value>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>End of Life</fullName>
                </value>
                <value>
                    <fullName>CSLD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinktoSchneiderProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advanced I2P - Identify if needed the relationship between the Supplier Problem and the matching Internal Schneider Electric Problem.</description>
        <inlineHelpText>Identify if needed the relationship between the Supplier Problem and the matching Internal Schneider Electric Problem.</inlineHelpText>
        <label>Link to Schneider Problem</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Problem__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Schneider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Problem__c</referenceTo>
        <relationshipLabel>Related Supplier Problem</relationshipLabel>
        <relationshipName>LinktoSchneiderProblem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <description>Probability that the Problem may occur</description>
        <inlineHelpText>Probability that the Problem may occur
Remote = 1
Low = 3
Moderate = 5
Frequent = 7
Virtually always = 10</inlineHelpText>
        <label>Occurrence/Downstream SC impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Frequent</fullName>
                </value>
                <value>
                    <fullName>Virtually always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferType__c</fullName>
        <description>This field is no longer editable. Please use the Affected Product related list to declare the impacted offer and range.</description>
        <inlineHelpText>Affected offer type</inlineHelpText>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Solution (no commercial reference)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PACommentsBySchneiderElectric__c</fullName>
        <description>Advanced I2P-comment to be entered by Schneider Electric for Preventive Action</description>
        <label>PA Comments by SE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAPlanValidationBySE__c</fullName>
        <description>Advanced I2P - Validation of the proposed preventive plan by Schneider Electric</description>
        <inlineHelpText>Validation of the proposed preventive plan by Schneider Electric</inlineHelpText>
        <label>Prevention Validation by SE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRBIcons__c</fullName>
        <formula>Tech_SafetyRelated1__c &amp;&quot; &quot;&amp;&quot; &quot;&amp; SensitivityIcon1__c &amp;&quot; &quot;&amp;&quot; &quot;&amp; if(IsRelatedToBusinessRiskEscalation__c!=&apos;NO&apos;,IsRelatedToBusinessRiskEscalation__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRB Icons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNumber__c</fullName>
        <description>Part Number known by Symphony</description>
        <inlineHelpText>Part Number known by Symphony</inlineHelpText>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartRevision__c</fullName>
        <description>Part Revision in Symphony</description>
        <inlineHelpText>Part Revision in Symphony</inlineHelpText>
        <label>Part Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advanced I2P- Identify the Supplier Name</description>
        <inlineHelpText>Identify the Supplier Name</inlineHelpText>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PartnerAccount</relationshipLabel>
        <relationshipName>PartnerAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercCustomersResponded__c</fullName>
        <description>I2P September Release 2012: Of the Affected population above, proportion of DIRECT AND INDIRECT customers who have responded to the notification. 
OCT 2015 Release</description>
        <formula>IF(Tech_NotifiedCustomers__c &gt; 0, 
(Tech_CustomersResponded__c/Tech_NotifiedCustomers__c), 0)</formula>
        <inlineHelpText>Of the notified population above, proportion of customers who have responded to the notification.</inlineHelpText>
        <label>% Customers Responded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercFinalNoticeSenttoCustomers__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(AffectedCustomersforNotification__c&gt; 0, (Tech_FinalNoticeSenttoCustomers__c/AffectedCustomersforNotification__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proportion of customers who have been sent a final notice due to their lack of response to previous notices. THIS IS ONLY APPLICABLE TO CONTAINMENT OF OFFER SAFETY ALERTS.</inlineHelpText>
        <label>% Final Notice for Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercFinalRecoveryRequeststoCustomers__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(AffectedCustomersforRecovery__c&gt;0, (Tech_FinalNotifiedEndUser__c/AffectedCustomersforRecovery__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Proportion of customers who have been sent a final notice due to their refusal or delay to take the actions requested in the notification. THIS IS ONLY APPLICABLE TO CONTAINMENT OF OFFER SAFETY ALERTS.</inlineHelpText>
        <label>% Final Notice for Recovery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercNotifiedCustomers__c</fullName>
        <description>I2P September Release 2012: Proportion of DIRECT AND INDIRECT customers who have been notified of the Problem so far. 
OCT 2015 Release</description>
        <formula>IF( AffectedCustomersforNotification__c &gt;0, (Tech_NotifiedCustomers__c/AffectedCustomersforNotification__c ), 0)</formula>
        <inlineHelpText>Of the potentially affected population above, proportion of customers who have been notified of the Problem so far.</inlineHelpText>
        <label>% Customers Notified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercProductsNotAffected__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(ProductsPotentiallyAffected__c &gt; 0,  ProductsNotAffected__c /  ProductsPotentiallyAffected__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Products Potentially Affected above, proportion of products that have been inspected and determined to NOT be affected by this Problem.</inlineHelpText>
        <label>% Products Not Affected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercProductsScheduled__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(Affectedproductsinstallations__c &gt; 0, (ProductsScheduled__c / Affectedproductsinstallations__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Products Actually Affected above, proportion of products that have been scheduled for containment and HAVE NOT been contained so far.</inlineHelpText>
        <label>% Products Not Contained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercProductsUntraceable__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(Affectedproductsinstallations__c  &gt; 0 ,  ProductsUntraceable__c /  Affectedproductsinstallations__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Products Potentially Affected above, proportion of products that could not be identified for containment.</inlineHelpText>
        <label>% Products Untraceable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercRecoveredCustomers__c</fullName>
        <description>I2P September Release 2012: Of the affected population above, proportion of customers on which the Problem has been contained so far. 
OCT 2015 Release</description>
        <formula>IF(AffectedCustomersforRecovery__c &gt;0, (Tech_TotalRecoveredCustomer__c/AffectedCustomersforRecovery__c ), 0)</formula>
        <inlineHelpText>Of the affected population above, proportion of customers for which the Problem has been contained.</inlineHelpText>
        <label>% Customers Contained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercRecoveredSites__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(AffectedSites__c &gt;0, (Tech_RecoveredSites__c/AffectedSites__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Sites Actually Affected above, proportion of sites that have been fully contained so far. Sites which have been inspected and determined not to be affected by the Problem are not counted here.</inlineHelpText>
        <label>% Sites Recovered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercScheduledSites__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(AffectedSites__c &gt;0, ( Tech_ScheduleSites__c / AffectedSites__c) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Sites Actually Affected above, proportion of sites that have been scheduled for containment and HAVE NOT been contained so far.</inlineHelpText>
        <label>% Sites Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercSitesNotAffected__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF(SitesPotentiallyAffected__c &gt; 0,  SitesNotAffected__c /  SitesPotentiallyAffected__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Of the Sites Potentially Affected above, proportion of sites that have been inspected and determined to NOT be affected by this Problem.</inlineHelpText>
        <label>% Sites Not Affected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PictureIllustratingtheProblem__c</fullName>
        <description>Paste a picture of the Problem in this space</description>
        <inlineHelpText>Paste a picture of the Problem in this space</inlineHelpText>
        <label>Picture Illustrating the Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PictureoftheIdealState__c</fullName>
        <description>Paste a picture of the product without the Problem</description>
        <inlineHelpText>Paste a picture of the product without the Problem</inlineHelpText>
        <label>Picture of the Ideal State</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PointofDetection__c</fullName>
        <description>Advanced I2P - Identify the place of detection.</description>
        <inlineHelpText>Identify the place of detection.</inlineHelpText>
        <label>Point of Detection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreventionKPI__c</fullName>
        <formula>if( ISBLANK(DateOf8DStart__c),null,if(Today()-(DateOf8DStart__c +62)&lt;1,null,if(Not( ISBLANK(DateOfRCACompletion__c) )&amp;&amp; Not( ISBLANK( TECH_FirstPreventiveDate__c ) )&amp;&amp; value(DaystoPrevention__c) &gt; 61,0,if(ISBLANK(DateOfRCACompletion__c)&amp;&amp; Not( ISBLANK( TECH_FirstPreventiveDate__c ) ),0,if(Not( ISBLANK(DateOfRCACompletion__c))&amp;&amp; ISBLANK( TECH_FirstPreventiveDate__c ),0,if( ISBLANK(DateOfRCACompletion__c)&amp;&amp; ISBLANK( TECH_FirstPreventiveDate__c ),0,1))))))</formula>
        <label>Prevention KPI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>5 * FLOOR( (19 - 
CASE(Severity__c, 
&quot;Minor&quot;, 1, 
&quot;Insignificant / Low&quot;, 3, 
&quot;Moderately Significant&quot;, 5, 
&quot;Significant / High&quot;, 7, 
&quot;Safety related&quot;, 10, 
0)) /10) + LOG( MAX( MAX( TODAY() - DATEVALUE(CreatedDate), TODAY() - NULLVALUE(ProblemLegacySystemCreationDate__c, TODAY() + 1) , TODAY() - NULLVALUE(DateOf8DStart__c, TODAY() + 1)), 1) ) 
* (11 - 
CASE(Severity__c, 
&quot;Minor&quot;, 1, 
&quot;Insignificant / Low&quot;, 3, 
&quot;Moderately Significant&quot;, 5, 
&quot;Significant / High&quot;, 7, 
&quot;Safety related&quot;, 10, 
0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrivateProblemDescription__c</fullName>
        <description>Describe the Problem in private terms, including any elements of the 5W2H structure.</description>
        <inlineHelpText>Describe the Problem in private terms, including any elements of the 5W2H structure.</inlineHelpText>
        <label>Private Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProblemLeaderEmail__c</fullName>
        <description>Advanced I2P - Email adress of the 8D leader</description>
        <inlineHelpText>Email adress of the 8D leader</inlineHelpText>
        <label>Problem Leader Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProblemLeaderSupplier__c</fullName>
        <description>Advanced I2P - Leader of the 8D</description>
        <inlineHelpText>Leader of the 8D</inlineHelpText>
        <label>Supplier Problem Leader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProblemLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Leader of the 8D project</description>
        <inlineHelpText>Leader of the 8D project</inlineHelpText>
        <label>Schneider Problem Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProblemLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProblemLegacyID__c</fullName>
        <description>ONLY for Problems migrated to bFO from other tools. Problem ID in the legacy tool.</description>
        <inlineHelpText>ONLY for Problems migrated to bFO from other tools. Problem ID in the legacy tool.</inlineHelpText>
        <label>Problem Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProblemLegacySystemCreationDate__c</fullName>
        <description>ONLY for Problems migrated to bFO from other tools. Creation date of Problem in the legacy tool.</description>
        <inlineHelpText>ONLY for Problems migrated to bFO from other tools. Creation date of Problem in the legacy tool.</inlineHelpText>
        <label>Problem Legacy System Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProblemLegacyTool__c</fullName>
        <description>ONLY for Problems migrated to bFO from other tools. Name of the legacy tool.</description>
        <inlineHelpText>ONLY for Problems migrated to bFO from other tools. Name of the legacy tool.</inlineHelpText>
        <label>Problem Legacy Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProblemSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advanced I2P - Person accountable for Schneider in the 8D project led by a supplier</description>
        <inlineHelpText>Person accountable for Schneider in the 8D project led by a supplier</inlineHelpText>
        <label>Problem Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProblemSponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductQualityProblem__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Product Quality Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductsNotAffected__c</fullName>
        <description>OCT 2015 Release :  Roll-up Summary of # Products Not Affected on Containment Action</description>
        <label># Products Not Affected</label>
        <summarizedField>ContainmentAction__c.ProductsNotAffected__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductsPotentiallyAffected__c</fullName>
        <description>OCT 2015 Release : Roll-up Summary of # Products Potentially Affected on Containment Action</description>
        <inlineHelpText>Number of products which, according to shipment and installation records, may be affected by the Problem and have been delivered OUT OF Schneider Electric, regardless of their current location.</inlineHelpText>
        <label># Products Potentially Affected</label>
        <summarizedField>ContainmentAction__c.ProductsPotentiallyAffected__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductsScheduled__c</fullName>
        <description>OCT 2015 Release : Roll-up Summary of # Products Scheduled</description>
        <label># Products Scheduled</label>
        <summarizedField>ContainmentAction__c.ProductsScheduled__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProductsUntraceable__c</fullName>
        <description>OCT 2015 Release :  Roll-up Summary of # Products Untraceable on Containment Action</description>
        <label># Products Untraceable</label>
        <summarizedField>ContainmentAction__c.ProductsUntraceable__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <description>Advanced I2P - Identify Schneider Electric Purchase Order reference</description>
        <inlineHelpText>Identify Schneider Electric Purchase Order reference</inlineHelpText>
        <label>Purchase Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>